<resources>

    <string name="app_name">AKR Gol App</string>
    <string name="ideato">Ideato e realizzato da Arandroid Developers. Per info</string>
    <string name="giornata">"Giornata: "</string>
    <string name="eccellenza_calabrese">Eccellenza Calabrese</string>
    <string name="prima_categoria">Prima Categoria</string>
    <string name="promozione_calabrese">Promozione Calabrese</string>
    <string name="serie_d">Serie D Girone I</string>
    <string name="seconda_categoria">Seconda Categoria</string>
    <string name="about">About</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="risultati">Risultati</string>
    <string name="classifica">Classifica</string>
    <string name="non_disponibile">Non Disponibile</string>
    <string name="ultima_partita">Ultima Partita</string>

    <string name="posizione">Posizione</string>
    <string name="incontri">Incontri</string>
    <string name="vittorie">Vittorie</string>
    <string name="pareggi">Pareggi</string>
    <string name="sconfitte">Sconfitte</string>
    <string name="aggiorna">Aggiorna</string>
</resources>