<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/eccellenzaView"
                    style="@style/linear_style"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/image_style"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/lnd" />

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/font_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eccellenza_calabrese" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/primaView"
                    style="@style/linear_style"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/image_style"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/lnd" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/font_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/promozione_calabrese" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/serieDView"
                    style="@style/linear_style_disabled"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="false"
                    android:orientation="vertical">

                    <FrameLayout style="@style/image_style">

                        <ImageView
                            style="@style/image_style"
                            android:alpha="0.3"
                            android:clickable="false"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/serie_d" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/non_disponibile"
                            style="@style/diagonal_text"/>
                    </FrameLayout>


                    <TextView
                        android:id="@+id/textView3"
                        style="@style/font_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.3"
                        android:text="@string/serie_d" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondaView"
                    style="@style/linear_style_disabled"
                    android:clickable="false"
                    android:orientation="vertical">

                    <FrameLayout style="@style/image_style">

                        <ImageView
                            style="@style/image_style"
                            android:alpha="0.3"
                            android:clickable="false"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/lnd" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/non_disponibile"
                            style="@style/diagonal_text"/>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/font_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.3"
                        android:text="@string/seconda_categoria" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutView"
                android:layout_width="288dp"
                android:layout_height="55dp"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/my_tile"
                android:gravity="center"
                android:weightSum="4">

                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/arandroid" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/font_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bannerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"/>

</RelativeLayout>